@@ -1,0 +1,3 @@
+package OpenTelemetry::Integration::Local::Only::Legacy;
+
+1;
